# public/api.yaml
@@ -5,9 +5,9 @@ info:
   version: 0.1.9
 
 servers:
-  - url: http://localhost:8000/api/
+  - url: http://localhost:8000/api
     description: local server
-  - url: http://producation.app/api
+  - url: http://movie-quotes-api.tamar.redberryinternship.ge/
     description: production server
 
 paths:
@@ -16,70 +16,325 @@ paths:
       summary: Returns a list of movies.
       responses:
         '200': 
-          description: A JSON array of movies
+          description: successfully fetched
           content:
             application/json:
               schema: 
                 type: array
                 items: 
                   type: string
-
+                default:
+                    id: 1
+                    name: 
+                      en: Pulp Fiction
+                      ka: მაკულატურა
+                    slug: pulp-fiction
+                    created_at: 2022-02-14T17:08:06.000000Z
+                    updated_at: 2022-02-19T20:52:19.000000Z
+                
   /quotes:
     get:
-      summary: Returns a list of quotes.
+      summary: Returns a list of quotes with specific movie.
       responses:
         '200': 
-          description: A JSON array of quotes
+          description: successfully fetched
           content:
             application/json:
               schema: 
                 type: array
                 items: 
                   type: string
+                default:
+                  id: 16
+                  movie_id: 1
+                  text:
+                    en: You Ever Read The Bible?
+                    ka: ბიბლიას კითხულობთ?
+                  thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                  created_at: 2022-02-14T17:08:06.000000Z
+                  updated_at: 2022-02-19T20:52:19.000000Z
+                  movie:
+                    id: 1
+                    name: 
+                      en: Pulp Fiction
+                      ka: მაკულატურა
+                    slug: pulp-fiction
+                    created_at: 2022-02-14T17:08:06.000000Z
+                    updated_at: 2022-02-19T20:52:19.000000Z
 
   /get-single-quote:
     get:
       summary: Returns a random single quote on custom page.
       responses:
         '200': 
-          description: A JSON array of a quote
+          description: successfully fetched
           content:
             application/json:
               schema: 
                 type: array
                 items: 
                   type: string
+                default:
+                  id: 16
+                  movie_id: 1
+                  text:
+                    en: You Ever Read The Bible?
+                    ka: ბიბლიას კითხულობთ?
+                  thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                  created_at: 2022-02-14T17:08:06.000000Z
+                  updated_at: 2022-02-19T20:52:19.000000Z
+                  movie:
+                    id: 1
+                    name: 
+                      en: Pulp Fiction
+                      ka: მაკულატურა
+                    slug: pulp-fiction
+                    created_at: 2022-02-14T17:08:06.000000Z
+                    updated_at: 2022-02-19T20:52:19.000000Z
 
-  /get-quotes/{id}:
+  /get-quotes/2:
     get:
-      summary: Returns an array of quotes with the same movie_id.
-      parameters:
-        - movie_id: id
-          in: path
-          required: true
-          description: Parameter is the id of the movie.
-          schema:
-            type: integer
-            format: int64
-            minimum: 1
+      summary: Returns an array of quotes with the id given in the link.
       responses:
         '200': 
-          description: A JSON array of quotes
+          description: successfully fetched
           content:
             application/json:
               schema: 
                 type: array
-                properties:
-                  id:
-                    type: integer
-                    format: int64
-                    example: 2
-                  movie:
-                    type: string
-                    example: Pulp fiction
-                '400':
-                  description: The specified user ID is invalid (not a number).
-                '404':
-                  description: A user with the specified ID was not found.
+                items: 
+                  type: string
                 default:
-                  description: Unexpected error
+                  id: 16
+                  movie_id: 1
+                  text:
+                    en: You Ever Read The Bible?
+                    ka: ბიბლიას კითხულობთ?
+                  thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                  created_at: 2022-02-14T17:08:06.000000Z
+                  updated_at: 2022-02-19T20:52:19.000000Z
+
+  /edit/movie/2:
+    get:
+      summary: returns a movie for editing.
+      responses:
+        '200': 
+          description: successfully fetched
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+                default:
+                  id: 1
+                  name: 
+                    en: Pulp Fiction
+                    ka: მაკულატურა
+                  slug: pulp-fiction
+                  created_at: 2022-02-14T17:08:06.000000Z
+                  updated_at: 2022-02-19T20:52:19.000000Z
+
+  /edit/quote/16:
+    get:
+      summary: Returns a quote for editing.
+      responses:
+        '200': 
+          description: successfully fetched
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+                default:
+                  id: 16
+                  movie_id: 1
+                  text:
+                    en: You Ever Read The Bible?
+                    ka: ბიბლიას კითხულობთ?
+                  thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                  created_at: 2022-02-14T17:08:06.000000Z
+                  updated_at: 2022-02-19T20:52:19.000000Z
+
+  /add/movie:
+    post:
+      summary: Creates a movie.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 2
+                name: 
+                  en: The Lord of the rings
+                  ka: ბეჭდების მბრძანებელი
+                slug: the-lord-of-the-rings
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: The Movie has been created
+  
+  /add/quote:
+    post:
+      summary: Creates a movie.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 18
+                movie_id: 2
+                text:
+                  en: My precious!
+                  ka: ჩემი განძი
+                thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: The Quote has been created
+
+  /edit/movie/1:
+    patch:
+      summary: Updates a movie.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 1
+                name: 
+                  en: Pulp Fiction
+                  ka: მაკულატურა
+                slug: pulp-fiction
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: Movie is updated
+
+  /edit/quote/18:
+    patch:
+      summary: Updates a quote.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 18
+                movie_id: 2
+                text:
+                  en: My precious!
+                  ka: ჩემი განძი
+                thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: Quote is updated
+
+  /delete/movie/1:
+    delete:
+      summary: Deletes a movie.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 1
+                name: 
+                  en: Pulp Fiction
+                  ka: მაკულატურა
+                slug: pulp-fiction
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: Movie is deleted
+
+  /delete/quote/18:
+    delete:
+      summary: Deletes a quote.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: string
+              default:
+                id: 18
+                movie_id: 2
+                text:
+                  en: My precious!
+                  ka: ჩემი განძი
+                thumbnail: thumbnails/5W2naqsUHfRrHoleEi3ccwTwubQSJlI7Xrg1JAI4.png
+                created_at: 2022-02-14T17:08:06.000000Z
+                updated_at: 2022-02-19T20:52:19.000000Z
+      responses: 
+        '201':
+          description: The Quote has been deleted
+
+  /login:
+    post:
+      summary: Logins the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: object
+              properties:
+                email: 
+                  type: string
+                password: 
+                  type: string
+      responses: 
+        '201':
+          description: The User has been logged in
+
+  /logout:
+    post:
+      summary: Logouts the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: object
+              properties:
+                email: 
+                  type: string
+                password: 
+                  type: string
+      responses: 
+        '201':
+          description: The User has been logged out
+      
+  
+                  
+
+                
